<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:elevation="10dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="20dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_user_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51">

        <EditText
            android:id="@+id/et_sign_up_first_name"
            style="@style/editTextStyle"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_username"
            android:drawableLeft="@drawable/ic_username"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/label_first_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/et_sign_up_last_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_sign_up_last_name"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:drawableStart="@drawable/ic_username"
            android:drawableLeft="@drawable/ic_username"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/label_last_name"
            android:inputType="textPersonName"
            style="@style/editTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/et_sign_up_first_name"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_sign_up_user_email"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/label_email"
            android:inputType="textEmailAddress"
            style="@style/editTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_sign_up_first_name" />

        <EditText
            android:id="@+id/et_sign_up_user_password"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/ic_password"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/label_password"
            android:inputType="textPassword"
            style="@style/editTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_sign_up_user_email" />

        <EditText
            android:id="@+id/et_sign_up_user_confirm_password"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_password"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/label_confirm_pwd"
            android:inputType="textPassword"
            style="@style/editTextStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_sign_up_user_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>